--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "jquery": "^3.3.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
+  "main": "dist/vue-awesome-swiper.js",
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
